# piano-training-frontend

./: .gitignore  index.html  irealLinks.json  package-lock.json  package.json  style.css  tsconfig.audioworklet.json  tsconfig.json
public/lib/: audioWorkletModule.js
src-tauri/: tauri.conf.json
src/app/: appManager.ts  app_bootstrap.ts  app_router.ts  app_routes.ts  app_runner.ts  main.ts  router.ts  routes.ts
src/common/abstracts/: base_floating_module.ts  base_page.ts
src/common/constants/: available_notes.ts  synth_constants.ts
src/common/enum/: modules_enum.ts
src/common/settings/: defaultExercice.ts  playlist.ts  synth.ts
src/common/types/: app-config.d.ts  app-config.ts  date.models.ts  exercice.d.ts  floating_module.ts  playlist.ts  router.ts  synth.d.ts  ui.ts
src/core/abstract_classes/: component.ts  module.ts  page.ts  store.ts
src/core/data_acess/: playlist_indexedDB_dao.ts
src/core/data_parsing/: ireal_pro_chart_decoder.ts  ireal_pro_data_mapper.ts
src/core/guards/: checkPlaylistId.ts  checkPlaylistTitle.ts  checkSongId.ts  checkSongTitle.ts
src/core/midi/: midi_controller_service.ts
src/core/search/: array_search_service.ts
src/core/settings/: defaultExercice.ts  initialExerciceStoreState.ts  moduleRegistry.ts  playlist.ts  synth.ts
src/core/sound/: audio_engine_orchestrator.ts  audio_worket_manager.ts  rustWorker.ts  synth_api_service.ts
src/core/sound/rust-synth/: Cargo.toml
src/core/sound/rust-synth/src/: lib.rs
src/core/state_management/: exercice_state_store.ts
src/stylesheets/: _variables.scss  main.scss
(+145 files in other folders)
