[package]
name = "rust-synth"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
once_cell = "1.21.3"
wasm-bindgen = "0.2"


[profile.release]
opt-level = "z"   # "z" = optimisé pour la taille, "s" = petite taille aussi, "3" = vitesse max
lto = true        # Link Time Optimization pour réduire la taille et améliorer la vitesse
codegen-units = 1 # plus lent à compiler mais meilleur code final
panic = 'abort'   # pour réduire le binaire, pas de stack unwinding